--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -26,16 +26,13 @@
           <h2 class="uk-card-title">{{ 'text.stat.total' | translate }}</h2>
           <div class="uk-grid-small uk-grid-divider uk-child-width-expand@s uk-text-left" uk-grid>
               <div class="uk-text-uppercase">
-                  <a [routerLink]="['./products']">{{ 'module.title.product' | translate }}</a><br/>
-                  {{ (stat != null) ? stat.products : null }}
+                  <a [routerLink]="['./products']">{{ (stat != null) ? stat.products : 0 }} {{ 'module.title.product' | translate }}</a>
               </div>
               <div class="uk-text-uppercase">
-                  <a [routerLink]="['./customers']">{{ 'module.title.customer' | translate }}</a><br/>
-                  {{ (stat != null) ? stat.customers : null }}
+                  <a [routerLink]="['./customers']">{{ (stat != null) ? stat.customers : 0 }} {{ 'module.title.customer' | translate }}</a>
               </div>
               <div class="uk-text-uppercase">
-                  <a [routerLink]="['./orders']">{{ 'module.title.transaction' | translate }}</a><br/>
-                  {{ (stat != null) ? stat.orders : null }}
+                  <a [routerLink]="['./orders']">{{ (stat != null) ? stat.orders : 0 }} {{ 'module.title.transaction' | translate }}</a>
               </div>
           </div>
         </div>
