--- a/src/app/main/customers/report/report.component.html
+++ b/src/app/main/customers/report/report.component.html
@@ -3,27 +3,38 @@
 <div class="content-padder content-background">
   <div class="uk-section-small">
     <div class="uk-container uk-container-large">
+      <customers-filter></customers-filter>
       <div class="uk-card uk-card-default uk-card-body" customers-table>
+        <div class="uk-display-block uk-text-right">
+          <button class="uk-button uk-button-primary" type="button" (click)="save()"
+                  [disabled]="!customers">{{ 'form.button.save-as-pdf' | translate }}</button>
+        </div>
         <table class="uk-table uk-table-justify uk-table-divider">
           <thead>
             <tr>
-              <th class="uk-width-auto">{{ 'table.customer.id' | translate }}</th>
+              <th>{{ 'table.number' | translate }}</th>
               <th class="uk-width-medium">{{ 'table.customer.name' | translate }}</th>
               <th>{{ 'table.company.name' | translate }}</th>
               <th>{{ 'form.label.email' | translate }}</th>
+              <th>{{ 'form.label.postal-code' | translate }}, {{ 'form.label.city' | translate }}</th>
+              <th>{{ 'form.label.country' | translate }}</th>
+              <th>{{ 'form.label.address' | translate }}</th>
             </tr>
           </thead>
           <tbody>
             <tr *ngIf="customers && !customers.length">
-              <th colspan="4" class="uk-text-center">{{ 'table.no-data' | translate }}</th>
+              <th colspan="8" class="uk-text-center">{{ 'table.no-data' | translate }}</th>
             </tr>
             <tr *ngFor="let customer of customers; let i=index;">
-              <td class="uk-text-uppercase">#{{customer.id.split('-')[0]}}</td>
+              <td>#{{i+1}}</td>
               <td class="uk-table-link">
-                <a [routerLink]="['../customers', customer.id]" class="uk-link-reset">{{customer.full_name}}</a>
+                <a [routerLink]="['/dashboard/customers', customer.id]" class="uk-link-reset">{{customer.full_name}}</a>
               </td>
               <td>{{customer.company_name}}</td>
               <td>{{customer.email}}</td>
+              <td>{{[customer.postal_code, customer.city].join(', ')}}</td>
+              <td>{{customer.country}}</td>
+              <td>{{customer.address}}</td>
             </tr>
           </tbody>
         </table>
