--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -21,8 +21,6 @@
                   {{ (stat != null) ? currency.set(stat.stats.profit).format('$0,0') : null }}
               </div>
           </div>
-        </div>
-        <div class="uk-card uk-card-default uk-card-body">
           <h2 class="uk-card-title">{{ 'text.stat.total' | translate }}</h2>
           <div class="uk-grid-small uk-grid-divider uk-child-width-expand@s uk-text-left" uk-grid>
               <div class="uk-text-uppercase">
@@ -37,7 +35,7 @@
           </div>
         </div>
       </div>
-      <div class="uk-margin-medium-top">
+      <div class="uk-margin-small-top">
         <div class="uk-card uk-card-default uk-card-body">
           <h2 class="uk-card-title">{{ 'text.stat.top-selling' | translate }}</h2>
           <table class="uk-table uk-table-justify uk-table-divider">
