refactors, update builder, add check update, fix spec test, travisci

--- a/src/app/main/customers/customers.component.html
+++ b/src/app/main/customers/customers.component.html
@@ -3,7 +3,7 @@
 <div class="content-padder content-background">
   <div class="uk-section-small">
     <div class="uk-container uk-container-large">
-      <customers-add></customers-add>
+      <storaji-customers-add></storaji-customers-add>
       <div class="uk-card uk-card-default uk-card-body" customers-table>
         <table class="uk-table uk-table-justify uk-table-divider">
           <thead>
