--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 <div class="content-padder content-background">
   <div class="uk-section-small">
     <div class="uk-container uk-container-large">
-      <orders-add></orders-add>
+      <storaji-orders-add></storaji-orders-add>
       <div>
         <div class="uk-card uk-card-default uk-card-body">
           <h2 class="uk-card-title">{{ 'text.stat.financial' | translate }}</h2>
