--- a/src/app/main/products/products.component.html
+++ b/src/app/main/products/products.component.html
@@ -3,7 +3,7 @@
 <div class="content-padder content-background">
   <div class="uk-section-small">
     <div class="uk-container uk-container-large">
-      <products-add></products-add>
+      <storaji-products-add></storaji-products-add>
       <div class="uk-card uk-card-default uk-card-body" products-table>
         <table class="uk-table uk-table-justify uk-table-divider">
           <thead>
