--- a/src/app/main/customers/overview/overview.component.html
+++ b/src/app/main/customers/overview/overview.component.html
@@ -3,7 +3,7 @@
 <div class="content-padder content-background">
   <div class="uk-section-small">
     <div class="uk-container uk-container-large">
-      <customers-edit></customers-edit>
+      <storaji-customers-edit></storaji-customers-edit>
       <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-1@s uk-margin uk-margin-remove-top" uk-grid>
         <div class="uk-width-1-1@m">
           <div class="uk-card-body">
