--- a/src/app/main/orders/add/add.component.html
+++ b/src/app/main/orders/add/add.component.html
@@ -2,7 +2,7 @@
 <div id="form-order-add" class="uk-card uk-card-default uk-card-body uk-margin-small uk-margin-remove-top" hidden>
   <h2 class="uk-card-title">{{ 'text.new.order' | translate }}</h2>
   <form (ngSubmit)="onSubmit();orderForm.reset();init();" #orderForm="ngForm">
-    <div class="uk-grid-small uk-child-width-1-3@m" uk-grid>
+    <div class="uk-grid-small uk-child-width-1-3@m" uk-grid *ngFor="let order of orders;let i = index">
       <div class="uk-padding-small">
         <label for="product" class="uk-form-label">{{ 'form.label.product' | translate }}</label>
         <input ngui-auto-complete
@@ -27,14 +27,20 @@
         <label for="amount" class="uk-form-label">{{ 'form.label.amount' | translate }}</label>
         <input type="number" name="amount" class="uk-input" placeholder="{{ 'form.placeholder.amount' | translate }}"
           [required]="true" [(ngModel)]="order.order_detail.amount" #amount="ngModel"
-          (keyup)="available_stock($event);" (change)="available_stock($event);">
+          (keyup)="available_stock($event);" (change)="available_stock($event, i);">
       </div>
-      <div class="uk-width-expand uk-padding-small">
+    </div>
+    <div class="uk-grid-small uk-child-width-expand" uk-grid>
+      <div class="uk-padding-small">
         <button type="submit" class="uk-button uk-button-primary"
           [disabled]="!orderForm.form.valid">{{ 'form.button.save' | translate }}</button>
         <button type="button" class="uk-button uk-button-default" uk-toggle="target: #form-order-add; animation: uk-animation-fade"
           (click)="init()">
           {{ 'form.button.cancel' | translate }}
+        </button>
+        <button type="button" class="uk-button uk-button-muted uk-align-right"
+          (click)="add()">
+          <span uk-icon="icon: plus;ratio:1.25;"></span>
         </button>
       </div>
     </div>
