--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -8,17 +8,24 @@
                <div class="uk-card uk-card-default">
                   <div class="uk-card-header">
                      <div class="uk-child-width-1-2" uk-grid>
-                        <div>
+                        <div class="uk-flex uk-flex-middle">
                           {{ 'module.title.login' | translate }}
                         </div>
                         <div class="uk-text-right">
-                          <button type="button"
-                                  class="uk-button uk-button-default uk-button-small"
-                                  (click)="translate.use(lang)"
-                                  [disabled]="(translate.currentLang === lang)"
-                                  *ngFor="let lang of translate.getLangs()">
-                                  {{ lang }}
+                          <button class="uk-button uk-button-link" type="button">
+                            <span uk-icon="icon: settings; ratio: 1.3"></span>
                           </button>
+                          <div uk-dropdown="mode: click;pos: bottom-right">
+                              <ul class="uk-nav uk-dropdown-nav">
+                                  <li *ngFor="let lang of translate.getLangs()"
+                                      class="{{ (translate.currentLang === lang) ? 'uk-active' : null }}"
+                                      [style.display]="(lang === '_i18n') ? 'none' : null">
+                                    <a (click)="translate.use(lang)">
+                                      {{ lang | translate }}
+                                    </a>
+                                  </li>
+                              </ul>
+                          </div>
                         </div>
                      </div>
                   </div>
