--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -20,7 +20,7 @@
                                   <li *ngFor="let lang of translate.getLangs()"
                                       class="{{ (translate.currentLang === lang) ? 'uk-active' : null }}"
                                       [style.display]="(lang === '_i18n') ? 'none' : null">
-                                    <a (click)="translate.use(lang)">
+                                    <a (click)="onChangeLanguage(lang)">
                                       {{ lang | translate }}
                                     </a>
                                   </li>
