--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -5,6 +5,12 @@
     <div class="uk-container uk-container-large">
       <storaji-orders-add></storaji-orders-add>
       <div>
+        <div class="uk-card uk-card-default uk-card-body" #chart>
+          <h2 class="uk-card-title">{{ 'text.graph.title' | translate }}</h2>
+          <chart [options]="options" (load)="saveInstance($event.context)"></chart>
+        </div>
+      </div>
+      <div class="uk-margin-small-top">
         <div class="uk-card uk-card-default uk-card-body">
           <h2 class="uk-card-title">{{ 'text.stat.financial' | translate }}</h2>
           <div class="uk-grid-small uk-grid-divider uk-child-width-expand@s uk-text-left" uk-grid>
