--- a/src/app/main/products/edit/edit.component.html
+++ b/src/app/main/products/edit/edit.component.html
@@ -2,7 +2,7 @@
 <button class="uk-button uk-button-danger uk-margin-small uk-margin-remove-top" type="button" uk-toggle="target: #modal-delete;"><span uk-icon="icon: trash;ratio:1.25;"></span></button>
 <div id="form-product-edit" class="uk-card uk-card-default uk-card-body uk-margin-small uk-margin-remove-top" hidden>
   <h2 class="uk-card-title">{{ 'text.edit.product' | translate }}: <strong>{{product.name}}</strong></h2>
-  <form (ngSubmit)="onSubmit();productForm.reset();initProduct();" #productForm="ngForm">
+  <form (ngSubmit)="onSubmit();productForm.reset();" #productForm="ngForm">
     <div class="uk-grid-small uk-child-width-1-3@m" uk-grid>
       <div class="uk-padding-small">
         <label for="name" class="uk-form-label">{{ 'form.label.name' | translate }}</label>
@@ -32,12 +32,12 @@
       <div class="uk-padding-small">
         <label for="cost" class="uk-form-label">{{ 'form.label.cost' | translate }}</label>
         <input type="text" name="cost" class="uk-input" placeholder="{{ 'form.placeholder.cost' | translate }}"
-          [required]="true" [(ngModel)]="product.cost" #cost="ngModel" (keyup)="onKeyup($event)">
+          [required]="true" [(ngModel)]="product.cost" #cost="ngModel" (keyup)="onKeyup($event)" (change)="onKeyup($event)" (blur)="onKeyup($event)">
       </div>
       <div class="uk-padding-small">
         <label for="selling_price" class="uk-form-label">{{ 'form.label.selling-price' | translate }}</label>
         <input type="text" name="selling_price" class="uk-input" placeholder="{{ 'form.placeholder.selling-price' | translate }}"
-          [required]="true" [(ngModel)]="product.selling_price" #selling_price="ngModel" (keyup)="onKeyup($event)" (blur)="onKeyup($event)">
+          [required]="true" [(ngModel)]="product.selling_price" #selling_price="ngModel" (keyup)="onKeyup($event)" (change)="onKeyup($event)" (blur)="onKeyup($event)">
       </div>
       <div class="uk-width-1-1 uk-padding-small">
         <label for="Description" class="uk-form-label">{{ 'form.label.description' | translate }}</label>
