--- a/src/app/main/products/report/report.component.html
+++ b/src/app/main/products/report/report.component.html
@@ -3,7 +3,7 @@
 <div class="content-padder content-background">
   <div class="uk-section-small">
     <div class="uk-container uk-container-large">
-      <storaji-products-filter></storaji-products-filter>
+      <storaji-products-filter (update)="onUpdate($event)"></storaji-products-filter>
       <div class="uk-card uk-card-default uk-card-body" products-table>
         <div class="uk-display-block uk-text-right">
           <button class="uk-button uk-button-primary" type="button" (click)="save()"
