refactor customers to unsubscribe,

--- a/src/app/main/customers/edit/edit.component.html
+++ b/src/app/main/customers/edit/edit.component.html
@@ -45,7 +45,7 @@
           {{ 'form.button.save' | translate }}
         </button>
         <button type="button" class="uk-button uk-button-default"
-          (click)="initCustomer()" uk-toggle="target: #form-customer-edit; animation: uk-animation-fade">
+          uk-toggle="target: #form-customer-edit; animation: uk-animation-fade">
           {{ 'form.button.cancel' | translate }}
         </button>
       </div>
