--- a/src/app/main/products/add/add.component.html
+++ b/src/app/main/products/add/add.component.html
@@ -1,7 +1,7 @@
 <button class="uk-button uk-button-primary uk-margin-small" type="button" uk-toggle="target: #form-product-add; animation: uk-animation-slide-top, uk-animation-fade"><span uk-icon="icon: plus;ratio:1.25;"></span></button>
 <div id="form-product-add" class="uk-card uk-card-default uk-card-body uk-margin-small uk-margin-remove-top" hidden>
   <h2 class="uk-card-title">{{ 'text.new.product' | translate }}</h2>
-  <form (ngSubmit)="onSubmit();productForm.reset();initProduct();" #productForm="ngForm">
+  <form (ngSubmit)="onSubmit();productForm.reset();" #productForm="ngForm">
     <div class="uk-grid-small uk-child-width-1-3@m" uk-grid>
       <div class="uk-padding-small">
         <label for="name" class="uk-form-label">{{ 'form.label.name' | translate }}</label>
