--- a/src/app/main/orders/add/add.component.html
+++ b/src/app/main/orders/add/add.component.html
@@ -1,7 +1,7 @@
 <button class="uk-button uk-button-primary uk-margin-small" type="button" uk-toggle="target: #form-order-add; animation: uk-animation-slide-top, uk-animation-fade">{{ 'text.new.order' | translate }}</button>
 <div id="form-order-add" class="uk-card uk-card-default uk-card-body uk-margin-small uk-margin-remove-top" hidden>
   <h2 class="uk-card-title">{{ 'text.new.order' | translate }}</h2>
-  <form (ngSubmit)="onSubmit();orderForm.reset();init();" #orderForm="ngForm">
+  <form (ngSubmit)="onSubmit();orderForm.reset();" #orderForm="ngForm">
     <div class="uk-grid-small uk-child-width-1-3@m" uk-grid *ngFor="let order of orders;let i = index">
       <div class="uk-padding-small">
         <label for="product" class="uk-form-label">{{ 'form.label.product' | translate }}</label>
@@ -11,7 +11,7 @@
         [source]="products"
         list-formatter="name"
         display-property-name="name"
-        placeholder="{{ 'form.placeholder.product' | translate }}" name="product" #product="ngModel"/>
+        placeholder="{{ 'form.placeholder.product' | translate }}" name="product-{{i}}" #product="ngModel"/>
       </div>
       <div class="uk-padding-small">
           <label for="customer" class="uk-form-label">{{ 'form.label.customer' | translate }}</label>
@@ -21,13 +21,13 @@
           [source]="customers"
           list-formatter="full_name"
           display-property-name="full_name"
-          placeholder="{{ 'form.placeholder.customer' | translate }}" name="customer" #customer="ngModel"/>
+          placeholder="{{ 'form.placeholder.customer' | translate }}" name="customer-{{i}}" #customer="ngModel"/>
         </div>
       <div class="uk-padding-small">
         <label for="amount" class="uk-form-label">{{ 'form.label.amount' | translate }}</label>
-        <input type="number" name="amount" class="uk-input" placeholder="{{ 'form.placeholder.amount' | translate }}"
+        <input type="number" name="amount-{{i}}" class="uk-input" placeholder="{{ 'form.placeholder.amount' | translate }}"
           [required]="true" [(ngModel)]="order.order_detail.amount" #amount="ngModel"
-          (keyup)="available_stock($event);" (change)="available_stock($event, i);">
+          (keyup)="available_stock($event, i);" (change)="available_stock($event, i);">
       </div>
     </div>
     <div class="uk-grid-small uk-child-width-expand" uk-grid>
@@ -39,7 +39,7 @@
           {{ 'form.button.cancel' | translate }}
         </button>
         <button type="button" class="uk-button uk-button-muted uk-align-right"
-          (click)="add()">
+          (click)="onAdd()">
           <span uk-icon="icon: plus;ratio:1.25;"></span>
         </button>
       </div>
