--- a/src/app/main/orders/orders.component.html
+++ b/src/app/main/orders/orders.component.html
@@ -3,7 +3,7 @@
 <div class="content-padder content-background">
   <div class="uk-section-small">
     <div class="uk-container uk-container-large">
-      <storaji-orders-add></storaji-orders-add>
+      <storaji-orders-add (update)="onUpdate($event)"></storaji-orders-add>
       <div class="uk-card uk-card-default uk-card-body" customers-table>
         <table class="uk-table uk-table-justify uk-table-divider">
           <thead>
